fixbug on IE9+ and FireFox

--- a/styles/editor.css
+++ b/styles/editor.css
@@ -5,9 +5,10 @@
 
 .m-editor{width: 860px; height: 480px; z-index:1001; border-radius:4px; background:#393939; position:absolute; /*left:50%; top:50%; margin: -240px 0 0 -430px;*/}
 .m-editor ::selection{ background: red; }
-.m-editor .ed_bak{ opacity:0.3;resize: none; background: none; border: none; padding: 0; font-family: PT Mono, Monaco, Consolas; font-size: 16px; width: 100%; height: 100%;}
-.m-editor .main{white-space:pre; /* margin: 4px 10px 10px 50px; */ overflow:scroll; outline:none; color: white; font-family: PT Mono, Monaco, Consolas; font-size: 15px;line-height: 21px;position: absolute;top: 0;bottom: 0;left: 0;right: 0;display: block;padding: 26px 10px 26px 50px;box-sizing: border-box;}
-.m-editor .line-number{ font-size: 13px; line-height:21px; color: #9A9A9A; position: absolute; left: 0; top: 0; width: 40px; height: 100%; overflow: hidden; text-align:right; background: transparent; border-right: 1px dashed gray; z-index: 10; padding: 26px 2px 26px 0; box-sizing: border-box;}
+.m-editor .ed_bak{ opacity: 0.3;resize: none; background: none; border: none; padding: 0; font-family: PT Mono, Monaco, Consolas; overflow: auto!important; font-size: 16px; width: 100%; /* height: 100%; */}
+.m-editor .main{white-space:pre; /* margin: 4px 10px 10px 50px; */ overflow:hidden; outline:none; color: white; font-family: PT Mono, Monaco, Consolas; font-size: 15px;line-height: 21px;position: absolute;top: 0;bottom: 26px;left: 0;right: 0;display: block;padding: 26px 10px 0 50px;box-sizing: border-box;}
+/*.m-editor .main:after{display: block; content: " "; height: 26px; }*/
+.m-editor .line-number{ font-size: 13px; line-height:21px; color: #9A9A9A; position: absolute; left: 0; top: 0; bottom:26px; width: 40px; /*height: 100%;*/ overflow: hidden; text-align:right; background: transparent; border-right: 1px dashed gray; z-index: 10; padding: 26px 2px 0 0; box-sizing: border-box;}
 .m-editor .before{color: #B5822E; background: #393939;position: relative; cursor: move; z-index: 11;height: 26px;top: -8px;line-height: 26px;border-radius: 4px;}
 .m-editor .before .eval-type{ position: absolute; top: 0px; right: 5px; color: white; }
 .m-editor .before:before{ white-space:pre; display:block; content:"<script>"; width:100px; margin: 8px 0 0 5px;}
@@ -21,5 +22,5 @@
     background: -webkit-linear-gradient(top, #ff3824 0%,#ff2851 100%); /* Chrome10+,Safari5.1+ */
     background: -o-linear-gradient(top, #ff3824 0%,#ff2851 100%); /* Opera 11.10+ */
     background: -ms-linear-gradient(top, #ff3824 0%,#ff2851 100%); /* IE10+ */
-    background: linear-gradient(to bottom, #ff3824 0%,#ff2851 100%); /* W3C */ padding: 5px 25px; border-radius: 5px; color:white; margin: -27px 4px 0 0; position: absolute; bottom: 7px; right: 2px; z-index: 12; border: 1px solid rgb(147, 16, 16);}
-.m-editor .arrow{ display: inline-block; width: 0; height: 0; border: 8px dashed transparent; border-left-color: rgb(244, 249, 249); margin: 0 0 0 4px; position: relative; top: 2px; right: -5px;}
+    background: linear-gradient(to bottom, #ff3824 0%,#ff2851 100%); /* W3C */ padding: 5px 25px; border-radius: 5px; color:white; margin: -27px 8px 0 0; position: absolute; bottom: 7px; right: 2px; z-index: 12; border: 1px solid rgb(147, 16, 16);}
+.m-editor .arrow{ display: inline-block; width: 0; height: 0; border: 8px solid transparent; border-left-color: rgb(244, 249, 249); margin: 0 0 0 4px; position: relative; top: 2px; right: -5px;}
